--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,4 +31,4 @@
     </div>
 </footer>
 <!--<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>-->
-<script async src="{{ "/js/lib/busuanzi.pure.mini.js " }}"></script>
+<script async src="{{ "/js/lib/busuanzi.pure.mini.js " }}" charset="utf-8"></script>
